--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     @import url(style.css);
 </style>
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src="//d3js.org/queue.v1.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/queue.v1.min.js"></script>
 <body>
    <!-- Table to hold the data table, map and legend -->
    <table border="0" cellpadding="10" style="overflow-y: scroll;">
@@ -109,33 +109,25 @@ legend
 
 /* Data has key "county" and value "rental" - i.e. average rental price per county */
 queue()
-    .defer(d3.csv, "fake_data.csv", data)
+    .defer(d3.csv, "secrets/fake_data.csv", data)
     .await(ready);
 
 function ready(error, data) {
   if (error) throw error;
 
   d3.map(data, function(d) {rateById.set(d.county, +d.rental)});	/* create the data map */
-//   d3.xml("WGB_FF.svg", "image/svg+xml", function(error, xml) { 
-//     var svgMap = xml.getElementsByTagName("g")[0];
-//     console.log(svgMap)})
-// d3.xml("WGB_FF.svg")
-//   .then(data => {
-//     d3.select("#map-container").node().append(data.documentElement)
-//   });
 
 
-  d3.xml("WGB_FF.svg", "image/svg+xml", function(error, xml) {		/* embed the SVG map */
+  d3.xml("secrets/WGB_FF.svg", "image/svg+xml", function(error, xml) {		/* embed the SVG map */
     if (error) throw error;
 
     var countyTable = tabulate(data, ["county", "rental"]);		/* render the data table */
-
+    console.log(xml);
     var svgMap = xml.getElementsByTagName("g")[0];			/* set svgMap to root g */
-console.log(svgMap)
-    ireland = main_chart_svg.node().appendChild(svgMap);		/* island of Ireland map */
 
+    floorplan = main_chart_svg.node().appendChild(svgMap);		/* floorplan */
   
-    d3.select(ireland).selectAll("rect,polygon,g")//.selectAll("path")		/* Map Republic counties to rental data */
+    d3.select(floorplan).selectAll("rect,polygon,g")//.selectAll("path")		
         .attr("class", function(d) { 
 		return quantize(rateById.get(this.id)); 
 	})
@@ -146,7 +138,7 @@ console.log(svgMap)
 
     d3.selectAll("rect,polygon").attr("stroke", "black")
 
-    d3.select(ireland).selectAll("rect,polygon")
+    d3.select(floorplan).selectAll("rect,polygon")
   	.on("mouseover", function(d)
  	{
 	  if (d3.select(this).classed("active")) return;		/* no need to change class when county is already selected */
@@ -162,13 +154,13 @@ console.log(svgMap)
         .on("click", function (d) { zoomed(d3.select(this)); });
 
     /* Let's add an id to each group that wraps a path */
-    d3.select(ireland).selectAll("rect,polygon")//.selectAll("path")
+    d3.select(floorplan).selectAll("rect,polygon")//.selectAll("path")
 	.each(function(d) { 
 	d3.select(this.parentNode).attr("id", this.id);
 	});
 
     /* Now add a text box to the group with content equal to the id of the group */
-    d3.select(ireland).selectAll("rect,polygon")//.selectAll("g")
+    d3.select(floorplan).selectAll("rect,polygon")//.selectAll("g")
 	.append("svg:text")
      	   .text(function(d){ 
 		return this.parentNode.id;
@@ -176,7 +168,7 @@ console.log(svgMap)
 	   .attr("x", function(d){ 
 		//console.log(d3.select(this.parentNode).select("path").attr("d"));
 	        //return 600;
-		//d3.select(ireland).select("path")                
+		//d3.select(floorplan).select("path")                
 		return getBoundingBox(d3.select(this.parentNode))[4];
 	    })
 	   .attr("y", function(d){ 
@@ -195,7 +187,7 @@ console.log(svgMap)
 }
 
 /* Thanks to http://bl.ocks.org/phil-pedruco/7557092 for the table code */
-/* and style - and what a coincidence he also used a map of Ireland!	*/
+
 
 function tabulate(data, columns) {
     var table = d3.select("#table_container").append("table")
