--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ var ie = d3.locale({
 var rateById = d3.map();
 
 var lastActive = "";
-var ireland;
+var floorplan;
 var data;
 var defaultScale = 0.6;	/* default scale of map - fits nicely on standard screen */
-var scale = 3;		/* maximum size to zoom county */
+var scale = 3;		/* maximum size to zoom room */
 
 var format = ie.numberFormat("$, #,##0d");
 
@@ -87,7 +87,7 @@ legend
     {
       if (lastActive == "") {
 	resetAll();
-        d3.select(ireland).selectAll("." + d).attr("class", "highlight");		/* Highlight all counties in range selected */
+        d3.select(floorplan).selectAll("." + d).attr("class", "highlight");		/* Highlight all counties in range selected */
       }
     });
 
@@ -106,7 +106,7 @@ legend
     .style("font-family", "sans-serif")
     .style("font-size", "12px");
 
-/* Data has key "county" and value "rental" - i.e. average rental price per county */
+/* Data has key "room" and value "devices" - i.e. average devices price per room */
 queue()
     .defer(d3.csv, "secrets/fake_data.csv", data)
     .await(ready);
@@ -117,13 +117,13 @@ queue()
 function ready(error, data) {
   if (error) throw error;
 
-  d3.map(data, function(d) {rateById.set(d.county, +d.rental)});	/* create the data map */
+  d3.map(data, function(d) {rateById.set(d.room, +d.devices)});	/* create the data map */
 
 
   d3.xml("secrets/WGB_FF.svg", "image/svg+xml", function(error, xml) {		/* embed the SVG map */
     if (error) throw error;
 
-    var countyTable = tabulate(data, ["county", "rental"]);		/* render the data table */
+    var roomTable = tabulate(data, ["room", "devices"]);		/* render the data table */
     console.log(xml);
     var svgMap = xml.getElementsByTagName("g")[0];			/* set svgMap to root g */
     console.log(svgMap);
@@ -133,9 +133,14 @@ function ready(error, data) {
         .attr("class", function(d) { 
 		return quantize(rateById.get(this.id)); 
 	})
-
-        .append("title").text(function(d) {				/* add title = name of each county and average rental */
-		return this.parentNode.id + ", " + format(rateById.get(this.parentNode.id))
+    // .attr("id",function(d) {	
+    //     return this.parentNode.id;} breaks everything
+    // )
+    .append("title").text(function(d) {				/* add title = name of each room and average devices */
+        // if(rateById.get(this.parentNode.id)!=null || rateById.get(this.parentNode.id)!=NaN || rateById.get(this.parentNode.id)!="NaN"){
+        //             return this.parentNode.id + ", " + format(rateById.get(this.parentNode.id))}
+        //             else return this.parentNode.id
+        return this.parentNode.id;
 	});
 
     d3.selectAll("rect,polygon,g").attr("stroke", "black")
@@ -143,13 +148,13 @@ function ready(error, data) {
     d3.select(floorplan).selectAll("rect,polygon")
   	.on("mouseover", function(d)
  	{
-	  if (d3.select(this).classed("active")) return;		/* no need to change class when county is already selected */
+	  if (d3.select(this).classed("active")) return;		/* no need to change class when room is already selected */
 	  d3.select(this).attr("class", "hover");
 	})
   	.on("mouseout", function(d)
  	{
 	  if (d3.select(this).classed("active")) return;
-           d3.select(this).attr("class", function(d) { 			/* reset county color to quantize range */
+           d3.select(this).attr("class", function(d) { 			/* reset room color to quantize range */
 		return quantize(rateById.get(this.id))
 	   }); 
 	})
@@ -162,7 +167,7 @@ function ready(error, data) {
 	});
 
     /* Now add a text box to the group with content equal to the id of the group */
-    d3.select(floorplan).selectAll("rect,polygon,g\fc")//.selectAll("g")
+    d3.select(floorplan).selectAll("rect,polygon,g")//.selectAll("g")
 	.append("svg:text")
      	   .text(function(d){ 
 		return this.parentNode.id;
@@ -184,8 +189,10 @@ function ready(error, data) {
 	   .attr('font-size','10pt')
 	;
 
+    grayed_out();
 
   });
+
 }
 
 /* Thanks to http://bl.ocks.org/phil-pedruco/7557092 for the table code */
@@ -222,33 +229,39 @@ function tabulate(data, columns) {
         .append("td")
 //        .attr("style", "font-family: Courier") // sets the font style
             .html(function(d) { 
-		if (d.column == "rental") return format(d.value); else return d.value; 
+		if (d.column == "devices") return format(d.value); else return d.value; 
 	     });
-    
+         grayed_out();
+
     return table;
 }
 
 function zoomed(d) {
   /* Thanks to http://complextosimple.blogspot.ie/2012/10/zoom-and-center-with-d3.html 	*/
   /* for a simple explanation of transform scale and translation  			*/
-  /* This function centers the county's bounding box in the map container		*/
-  /* The scale is set to the minimum value that enables the county to fit in the	*/
+  /* This function centers the room's bounding box in the map container		*/
+  /* The scale is set to the minimum value that enables the room to fit in the	*/
   /* container, horizontally or vertically, up to a maximum value of 3.			*/
-  /* If the full width of container is not required, the county is horizontally centred */
-  /* Likewise, if the full height of the container is not required, the county is	*/
+  /* If the full width of container is not required, the room is horizontally centred */
+  /* Likewise, if the full height of the container is not required, the room is	*/
   /* vertically centred.								*/
+  grayed_out();
 
   var xy = getBoundingBox(d);	/* get top left co-ordinates and width and height 	*/
-  if (d.classed("active")) {	/* if county is active reset map scale and county colour */
+  console.log(xy);
+  if (d.classed("active")) {	/* if room is active reset map scale and room colour */
       	d.attr("class", function(d) { 
+              console.log(quantize(rateById.get(this.id)))
 		return quantize(rateById.get(this.id))
 	}); 
-    main_chart_svg.selectAll("#viewport")
+    main_chart_svg.selectAll("#floorplan")
   	.transition().duration(750).attr("transform", "scale(" + defaultScale + ")");
     lastActive = "";
 
-  } else {			/* zoom into new county      */
-    resetAll();			/* reset county colors	     */
+  } else {			/* zoom into new room      */
+    console.log("resetting")
+    resetAll();			/* reset room colors	     */
+    grayed_out();
     
     /* scale is the max number of times bounding box will fit into container, capped at 3 times */
     scale = Math.min(mw/xy[1], mh/xy[3], 3);	
@@ -258,7 +271,7 @@ function zoomed(d) {
     var tx = -xy[0] + (mw - xy[1]*scale)/(2*scale);
     var ty = -xy[2] + (mh - xy[3]*scale)/(2*scale);
 
-    main_chart_svg.selectAll("#viewport")
+    main_chart_svg.selectAll("#floorplan")
   	.transition().duration(750).attr("transform", "scale(" + scale + ")translate("+ tx +"," + ty + ")");
     d.attr("class", "active");
     lastActive = d.attr("id");
@@ -266,26 +279,27 @@ function zoomed(d) {
 }
 
 function reset(selection) {
-    /* resets the color of a single county */
+    /* resets the color of a single room */
     if (selection != "") 
-	d3.select(ireland).select("#" + selection).attr("class", function(d) { 
+	d3.select(floorplan).select("#" + selection).attr("class", function(d) { 
 	  return quantize(rateById.get(this.id))
 	});
 }
 
 function resetAll() {
     /* resets the color of all counties */
-    d3.select(ireland).selectAll("#republic")
+    d3.select(floorplan).selectAll("rect,polygon,g")
       .attr("class", function(d) { 
 	  return quantize(rateById.get(this.id))
     });
 }
 
 function tableRowClicked(x) {
-    /* resets colors and zooms into new county */
+    /* resets colors and zooms into new room */
     resetAll();
-    lastActive = x.county;
-    zoomed(d3.select(ireland).selectAll("#" + x.county));
+    lastActive = x.room;
+    console.log(x.room)
+    zoomed(d3.select(floorplan).selectAll("#" + x.room));
 }
 
 function getBoundingBox(selection) {
@@ -305,6 +319,22 @@ function grayed_out(){
     d3.select("#street").style("stroke","lightgray")
     d3.select("#street-2").style("fill","lightgray")
     d3.select("#street-2").style("stroke","lightgray")
+
+    d3.select("#staircase-1").style("fill","lightgray")
+    d3.select("#staircase-2").style("fill","lightgray")
+    d3.select("#staircase-3").style("fill","lightgray")
+    d3.select("#staircase-4").style("fill","lightgray")
+    d3.select("#staircase-5").style("fill","lightgray")
+
+    d3.select("#balcony").style("fill","lightgray")
+    d3.select("#balcony-2").style("fill","lightgray")
+    d3.select("#balcony-3").style("fill","lightgray")
+
+    d3.selectAll("#FC33").style("fill","none")
+    d3.selectAll("#FS33").style("fill","none")
+
+
+
 }
 
 </script>
